Fixed Order Button not showing on Mobile Device

--- a/css/commission-animation.css
+++ b/css/commission-animation.css
@@ -39,6 +39,7 @@
 }
 .animation-order{
     scale: 0%;
+    margin-left: 10000px;
 }
 .animation-order-enabled{
     background: linear-gradient(94.94deg, #FD9E04 -1.76%, #FF4C01 80.53%);
