--- a/css/content.css
+++ b/css/content.css
@@ -607,6 +607,7 @@ body{
     transition: 0.5s;
 }
 .order-btn-disabled{
+    margin-left: 0px;
     background: gray;
 }
 /*---------------------------------------------------------------------------------------------------*/
